--- a/index.html
+++ b/index.html
@@ -103,12 +103,10 @@
 </head>
 <body onload="initialise()">
     <h1>The Carnivore Calorie Calculator</h1>
-    <h3>Are you eating enough on carnivore?</h3>
-    This is an early work in progress. Feedback to @criticalcarnivore on Instagram.
-    Disclaimer: The results from this tool provide a loose guide and are not to be taken as medical advice.
-    Seek the advice of <u>an appropriately qualified</u> professional before making any significant lifestyle changes.
-    Note that there is no one-size-fits-all answer to anything to do with health, but the guidance given should provide pointers in directions to consider.
-    <br><br>
+    <p>This calorie calculator estimates your daily caloric needs based on factors such as age, gender, weight, height, and physical activity level. It utilizes the Mifflin-St Jeor equation, a widely recognized method for calculating Basal Metabolic Rate (BMR), which represents the number of calories your body requires at rest to maintain vital functions.</p>
+    <h2>Are you eating enough on carnivore?</h2>
+    <p>Eating enough protein and fat on a carnivore diet is essential. Protein helps build and repair muscles, while fat provides energy. Using a calorie calculator can help you ensure you're getting the right amounts of each.</p>
+    <p><b>Disclaimer:</b> The results from this tool provide a general guide and should not be taken as medical advice. Consult with a qualified healthcare professional before making any significant lifestyle changes.</p>
     <label for="gender">Gender:</label>
     <select name="gender" id="gender">
         <option value="Male">Male</option>
