--- a/index.html
+++ b/index.html
@@ -162,8 +162,12 @@
     <br><br>
     <button onclick="passCalculateTDEE()">Calculate</button>
     <br><br>
-
-
+    <p>Alternative tools:</p>
+    <ol>
+        <li><a href="https://www.theprimal.com/carnivore-diet-macro-calculator">The Primal Carnivore Calculator</a></li>
+        <li><a href="https://app.gocarnivore.com/tools/carnivore-diet-macro-calculator">GoCarnivore Carnivore Diet Macro Calculator</a></li>
+        <li><a href="https://app.gocarnivore.com/tools/meal-planner">Carnivore Meal Planner</a></li>
+    </ol>
 <script>
     // pull variables
     // https://www.w3schools.com/howto/howto_css_switch.asp - toggle switch
