--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
     </style>
 </head>
 <body onload="initialise()">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a href="https://www.theprimal.com/carnivore-diet-macro-calculator">The Primal Carnivore Calculator</a>
+        <a href="https://app.gocarnivore.com/tools/carnivore-diet-macro-calculator">GoCarnivore Carnivore Diet Macro Calculator</a>
+        <a href="https://app.gocarnivore.com/tools/meal-planner">Carnivore Meal Planner</a>
+    </nav>
     <h1>The Carnivore Calorie Calculator</h1>
     <p>This calorie calculator estimates your daily caloric needs based on factors such as age, gender, weight, height, and physical activity level. It utilizes the Mifflin-St Jeor equation, a widely recognized method for calculating Basal Metabolic Rate (BMR), which represents the number of calories your body requires at rest to maintain vital functions.</p>
     <h2>Are you eating enough on carnivore?</h2>
@@ -162,12 +167,6 @@
     <br><br>
     <button onclick="passCalculateTDEE()">Calculate</button>
     <br><br>
-    <p>Alternative tools:</p>
-    <ol>
-        <li><a href="https://www.theprimal.com/carnivore-diet-macro-calculator">The Primal Carnivore Calculator</a></li>
-        <li><a href="https://app.gocarnivore.com/tools/carnivore-diet-macro-calculator">GoCarnivore Carnivore Diet Macro Calculator</a></li>
-        <li><a href="https://app.gocarnivore.com/tools/meal-planner">Carnivore Meal Planner</a></li>
-    </ol>
 <script>
     // pull variables
     // https://www.w3schools.com/howto/howto_css_switch.asp - toggle switch
