--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TDEE Calculator</title>
+    <meta
+      name="google-site-verification"
+      content="E5dhEKTFEwyURojpAAMtZSwjpTRP5IHfYace4g0GyXs"
+    />
     <script type="text/javascript" src="scripts/tdeecalc.js"></script>
     <script type="text/javascript" src="scripts/guidance_nocals.js"></script>
     <link
