--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TDEE Calculator</title>
     <meta
+      name="description"
+      content="Calculate your optimal protein and fat intake with our Carnivore Diet Calculator. Ensure you're meeting nutritional needs for a healthy carnivore lifestyle."
+    />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-KW8DYF9PV2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-KW8DYF9PV2");
+    </script>
+    <meta
       name="google-site-verification"
       content="E5dhEKTFEwyURojpAAMtZSwjpTRP5IHfYace4g0GyXs"
     />
